tests/runnable/test_05_return.ul
// test 5 : Has a return
// Parser / Lexer Valid: Yes

void main()
{
    return;
}